re PR c++/7804 (bad printing of fp constant in warning message)

PR c++/7804
	* error.c (dump_expr) [REAL_CST]: Output in decimal format.

	* g++.dg/other/warning1.C: New test.

From-SVN: r57843